--- a/styles/default.css
+++ b/styles/default.css
@@ -47,20 +47,11 @@ a:hover {
 
 
 .site-nav{
-    display: flex;
-    justify-content: center;
-    gap: 1rem;
-    flex-wrap: wrap;
+   text-align: center;
 
-    border-top: 2px solid #000000;
-    padding-top: 0.6rem;
-    margin-top: 1rem;
 }
 
-.site-nav a{
-    text-decoration: none;
-    padding: 0.25rem 0.5rem;
-}
+
 
 
 
