Added new files to my certifications folder

--- a/components/header.html
+++ b/components/header.html
@@ -1,9 +1,23 @@
 <header>
-    <h1> Alanah Little</h1>
 
+    <h1>Alanah Little | Adventurous Lion</h1>
+
+    <!-- Primary Navigation (Main Site Pages) -->
     <nav>
-        <a href="index.html"> Home</a>
-        <a href="introduction.html"> introduction</a>
-        <a href= "contract.html"> Contract</a>
+        <a href="../index.html">Home</a> |
+        <a href="../introduction.html">Introduction</a> |
+        <a href="../contract.html">Contract</a> |
+        <a href="../certifications/survey.html">Survey</a> |
+        <a href="../certifications/gallery.html">Gallery</a> |
+        <a href="../certifications/inventory.html">Inventory</a> |
+        <a href="../certifications/instructions.html">Instructions</a> |
+        <a href="../certifications/highlight.html">Highlight</a>
     </nav>
+
+    <!-- Secondary Navigation (Non-Styled / Misc Pages) -->
+    <nav>
+        <span>Other Pages:</span>
+        <a href="../stuff/CRAPpy PaGe 🫩.HTM">Crappy Page</a>
+    </nav>
+
 </header>
