--- a/components/header.html
+++ b/components/header.html
@@ -7,6 +7,8 @@
         <a href="../index.html">Home</a> |
         <a href="../introduction.html">Introduction</a> |
         <a href="../contract.html">Contract</a> |
+        <a href="../itis3135/index.html">ITIS 3135</a>
+        <a href="../itis3135/website_evaluations.html">Website Evaluations</a>
         <a href="../certifications/survey.html">Survey</a> |
         <a href="../certifications/gallery.html">Gallery</a> |
         <a href="../certifications/inventory.html">Inventory</a> |
