--- a/components/footer.html
+++ b/components/footer.html
@@ -1,3 +1,5 @@
-<footer>
-  <p>© 2026 Alanah Little | UNC Charlotte</p>
-</footer>
+<p>
+  Page designed by 
+  <a href="alanahlittledesignco.com/">Alanah Little Design Co.</a> &copy; 2026
+</p>
+
