Fixing the structure
nav bar

--- a/components/footer.html
+++ b/components/footer.html
@@ -1,5 +1,6 @@
-<p>
-  Page designed by 
-  <a href="alanahlittledesignco.com/">Alanah Little Design Co.</a> &copy; 2026
-</p>
-
+<footer>
+  <p>
+    Page designed by
+    <a href="https://alanahlittledesignco.com/">Alanah Little Design Co.</a> &copy; 2026
+  </p>
+</footer>
