--- a/components/header.html
+++ b/components/header.html
@@ -1,25 +1,25 @@
 <header>
 
-    <h1>Alanah Little | Adventurous Lion</h1>
+<h1>Alanah Little | Adventurous Lion</h1>
 
-    <!-- Primary Navigation (Main Site Pages) -->
-    <nav>
-        <a href="../index.html">Home</a> |
-        <a href="../introduction.html">Introduction</a> |
-        <a href="../contract.html">Contract</a> |
-        <a href="../itis3135/index.html">ITIS 3135</a>
-        <a href="../itis3135/website_evaluations.html">Website Evaluations</a>
-        <a href="../certifications/survey.html">Survey</a> |
-        <a href="../certifications/gallery.html">Gallery</a> |
-        <a href="../certifications/inventory.html">Inventory</a> |
-        <a href="../certifications/instructions.html">Instructions</a> |
-        <a href="../certifications/highlight.html">Highlight</a>
-    </nav>
+<!-- Primary Navigation -->
+<nav>
+  <a href="/index.html">Home</a> |
+  <a href="/introduction.html">Introduction</a> |
+  <a href="/contract.html">Contract</a> |
+  <a href="/itis3135/index.html">ITIS 3135</a> |
+  <a href="/itis3135/website_evaluations.html">Website Evaluations</a> |
+  <a href="/certifications/survey.html">Survey</a> |
+  <a href="/certifications/gallery.html">Gallery</a> |
+  <a href="/certifications/inventory.html">Inventory</a> |
+  <a href="/certifications/instructions.html">Instructions</a> |
+  <a href="/certifications/highlight.html">Highlight</a>
+</nav>
 
-    <!-- Secondary Navigation (Non-Styled / Misc Pages) -->
-    <nav>
-        <span>Other Pages:</span>
-        <a href="../stuff/CRAPpy PaGe 🫩.HTM">Crappy Page</a>
-    </nav>
+<!-- Secondary -->
+<nav>
+  <span>Other Pages:</span>
+  <a href="/stuff/CRAPpy Page 😵.HTM">Crappy Page</a>
+</nav>
 
 </header>
